<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/messagingButton"
        android:title="@string/messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/profileButton"
        android:title="@string/profile"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/logoutButton"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/helpButton"
        android:title="@string/help" />
    <item
        android:id="@+id/reportBugButton"
        android:title="@string/report_a_bug"
        app:showAsAction="never" />

</menu>