<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpDocumentationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/help_appbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/general_menu"
        app:title="Help and Documentation" >
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/introHelp1"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/helpIntro" />

    <TextView
        android:id="@+id/introHelp2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/helpIntro_2" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">


        <Button
            android:id="@+id/help_account_button"
            android:layout_width="222dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:text="@string/help_account_header"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <Button
            android:id="@+id/help_search_button"
            android:layout_width="221dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:text="@string/help_search_header"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <Button
            android:id="@+id/help_edit_button"
            android:layout_width="224dp"
            android:layout_height="86dp"
            android:contentDescription="@string/app_name"
            android:text="@string/help_edit_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <Button
            android:id="@+id/help_message_button"
            android:layout_width="222dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:text="@string/help_messaging_header"/>

    </LinearLayout>

</LinearLayout>