<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/main_menu"
            app:title="@string/app_name" >

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/createList"
        app:backgroundTint="@color/black"
        app:srcCompat="@drawable/ic_plus_24"
        app:tint="@color/white"
        tools:ignore="VectorDrawableCompat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Search_Item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="54dp"
        android:background="#DDDDDD" />

    <TextView
        android:id="@+id/notFoundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noResultsFound"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/locationStatusLabel"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:text="@string/locationPermissionNotGranted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>
