<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/chatBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/chat_menu"
        app:title="@string/app_name" >

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/chatBar"
        app:layout_constraintBottom_toTopOf="@id/messageField"
        android:dividerHeight="16dp"
        android:divider="@android:color/transparent"
        android:id="@+id/list_of_messages" />



    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="4"
        android:contentDescription="@string/sendButtonImgDescrip"
        android:padding="4dp"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/messageField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="User Message"
        android:ems="10"
        android:hint="@string/msgHint"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

